# optimisationLibrary

./: CMakeLists.txt  README.md  TODO.txt
cmake/: FindCPLEX.cmake  FindCPLEX.cmake.backup  FindGLPK.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake
docs/: Documentation.md
instances/: ConcreteMixerRoutingTest.txt  ConcreteMixerRoutingTest10.txt  ConcreteMixerRoutingTest11.txt  ConcreteMixerRoutingTest12.txt  ConcreteMixerRoutingTest1A.txt  ConcreteMixerRoutingTest2.txt  ConcreteMixerRoutingTest2A.txt  ConcreteMixerRoutingTest3.txt  ConcreteMixerRoutingTest3A.txt  ConcreteMixerRoutingTest4.txt  ConcreteMixerRoutingTest4A.txt  ConcreteMixerRoutingTest5.txt  ConcreteMixerRoutingTest5A.txt  ConcreteMixerRoutingTest6.txt  ConcreteMixerRoutingTest7.txt  ConcreteMixerRoutingTest8.txt  ConcreteMixerRoutingTest9.txt
src/: CMakeLists.txt  CPLEX.cc  CPLEX.h  Data.cc  Data.h  DataAssignmentProblem.cc  DataAssignmentProblem.h  DataCapitalBudgeting.cc  DataCapitalBudgeting.h  DataConcreteMixerTruckRouting.cc  DataConcreteMixerTruckRouting.h  DataGAP.cc  DataGAP.h  DataKnapsackProblem.cc  DataKnapsackProblem.h  DataMotivatingProblem.cc  DataMotivatingProblem.h  Execute.cc  Execute.h  GAPinstances.txt  GLPK.cc  GLPK.h  Model.cc  Model.h  ModelAssignmentProblem.cc  ModelAssignmentProblem.h  ModelCapitalBudgeting.cc  ModelCapitalBudgeting.h  ModelConcreteMixerTruckRouting.cc  ModelConcreteMixerTruckRouting.h  ModelGAP.cc  ModelGAP.h  ModelKnapsackProblem.cc  ModelKnapsackProblem.h  ModelMotivatingProblem.cc  ModelMotivatingProblem.h  Option.cc  Option.h  Options.cc  Options.h  (+9 more)
tests/CapitalBudgetingProblem/: README.md
tests/GeneralizedAssignmentProblem/: README.md  gap1.txt  gap10.txt  gap11.txt  gap12.txt  gap2.txt  gap3.txt  gap4.txt  gap5.txt  gap6.txt  gap7.txt  gap8.txt  gap9.txt
